fix contact links spacing and size on smaller screens

--- a/src/components/ContactLinks/ContactLinks.module.scss
+++ b/src/components/ContactLinks/ContactLinks.module.scss
@@ -4,14 +4,14 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	gap: 2rem;
+	gap: 1rem;
 }
 
 .link {
 	display: flex;
 	align-items: center;
 	cursor: pointer;
-	font-size: 2rem;
+	font-size: 1.5rem;
 	color: #000;
 	padding: 0.75rem;
 	border: 3px solid v.$button-border;
@@ -28,6 +28,9 @@
 }
 
 @media (min-width: 900px) {
+	.links {
+		gap: 2rem;
+	}
 	.link {
 		font-size: 2.5rem;
 		padding: 1rem;
